2_Grammar/lab1-test-dir/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCPP.y
-----------------------------------------------------------------------------

state 38 contains 1 shift/reduce conflicts.
state 289 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pDecl -> Decl                               (6)
	%start_pListDecl -> ListDecl                       (7)
	%start_pListStm -> ListStm                         (8)
	%start_pExp16 -> Exp16                             (9)
	%start_pListString -> ListString                   (10)
	%start_pExp15 -> Exp15                             (11)
	%start_pListQual -> ListQual                       (12)
	%start_pListExp -> ListExp                         (13)
	%start_pExp14 -> Exp14                             (14)
	%start_pExp13 -> Exp13                             (15)
	%start_pExp12 -> Exp12                             (16)
	%start_pExp11 -> Exp11                             (17)
	%start_pExp10 -> Exp10                             (18)
	%start_pExp9 -> Exp9                               (19)
	%start_pExp8 -> Exp8                               (20)
	%start_pExp4 -> Exp4                               (21)
	%start_pExp3 -> Exp3                               (22)
	%start_pExp2 -> Exp2                               (23)
	%start_pExp1 -> Exp1                               (24)
	%start_pQual -> Qual                               (25)
	%start_pListType -> ListType                       (26)
	%start_pExp -> Exp                                 (27)
	%start_pExp5 -> Exp5                               (28)
	%start_pExp6 -> Exp6                               (29)
	%start_pExp7 -> Exp7                               (30)
	%start_pType -> Type                               (31)
	%start_pListId -> ListId                           (32)
	Integer -> L_integ                                 (33)
	Double -> L_doubl                                  (34)
	Char -> L_charac                                   (35)
	String -> L_quoted                                 (36)
	Id -> L_Id                                         (37)
	Program -> ListDef                                 (38)
	ListDef ->                                         (39)
	ListDef -> ListDef Def                             (40)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (41)
	Def -> 'inline' Type Id '(' ListArg ')' '{' ListStm '}'   (42)
	Def -> Type Id '(' ListArg ')' ';'                 (43)
	Def -> 'inline' Type Id '(' ListArg ')' ';'        (44)
	Def -> 'typedef' Type Id ';'                       (45)
	Def -> Type ListId ';'                             (46)
	Def -> Type Id '=' Exp ';'                         (47)
	Def -> Type '&' Id '=' Exp ';'                     (48)
	Def -> 'struct' Id '{' ListDecl '}' ';'            (49)
	Def -> 'using' ListQual ';'                        (50)
	Def -> 'const' Def                                 (51)
	Arg -> Type                                        (52)
	Arg -> 'const' Type                                (53)
	Arg -> Type '&'                                    (54)
	Arg -> 'const' Type '&'                            (55)
	Arg -> Type Id                                     (56)
	Arg -> 'const' Type Id                             (57)
	Arg -> Type '&' Id                                 (58)
	Arg -> 'const' Type '&' Id                         (59)
	Arg -> Type Id '=' Exp                             (60)
	Arg -> 'const' Type Id '=' Exp                     (61)
	Arg -> Type '&' Id '=' Exp                         (62)
	Arg -> 'const' Type '&' Id '=' Exp                 (63)
	ListArg ->                                         (64)
	ListArg -> Arg                                     (65)
	ListArg -> Arg ',' ListArg                         (66)
	Stm -> Exp ';'                                     (67)
	Stm -> Type ListId ';'                             (68)
	Stm -> Type Id '=' Exp ';'                         (69)
	Stm -> Type '&' Id '=' Exp ';'                     (70)
	Stm -> 'const' Type Id '=' Exp ';'                 (71)
	Stm -> 'const' Type '&' Id '=' Exp ';'             (72)
	Stm -> 'typedef' Type Id ';'                       (73)
	Stm -> 'struct' Id '{' ListDecl '}' ';'            (74)
	Stm -> 'return' Exp ';'                            (75)
	Stm -> 'while' '(' Exp ')' Stm                     (76)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (77)
	Stm -> 'for' '(' Type Id ';' Exp ';' Exp ')' Stm   (78)
	Stm -> 'for' '(' Type Id '=' Exp ';' Exp ';' Exp ')' Stm   (79)
	Stm -> 'if' '(' Exp ')' Stm                        (80)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (81)
	Stm -> '{' ListStm '}'                             (82)
	Decl -> Type Id                                    (83)
	ListDecl ->                                        (84)
	ListDecl -> ListDecl Decl ';'                      (85)
	ListStm ->                                         (86)
	ListStm -> ListStm Stm                             (87)
	Exp16 -> 'true'                                    (88)
	Exp16 -> 'false'                                   (89)
	Exp16 -> Integer                                   (90)
	Exp16 -> Double                                    (91)
	Exp16 -> Char                                      (92)
	Exp16 -> ListString                                (93)
	Exp16 -> '(' Exp ')'                               (94)
	ListString -> String                               (95)
	ListString -> String ListString                    (96)
	Exp15 -> Exp15 '[' Exp ']'                         (97)
	Exp15 -> ListQual                                  (98)
	Exp15 -> Exp15 '(' ListExp ')'                     (99)
	Exp15 -> Exp16                                     (100)
	ListQual -> Qual                                   (101)
	ListQual -> Qual '::' ListQual                     (102)
	ListExp ->                                         (103)
	ListExp -> Exp                                     (104)
	ListExp -> Exp ',' ListExp                         (105)
	Exp14 -> Exp14 '.' Exp15                           (106)
	Exp14 -> Exp14 '->' Exp15                          (107)
	Exp14 -> Exp15 '++'                                (108)
	Exp14 -> Exp15 '--'                                (109)
	Exp14 -> '*' Exp15                                 (110)
	Exp14 -> Exp15                                     (111)
	Exp13 -> '++' Exp14                                (112)
	Exp13 -> '--' Exp14                                (113)
	Exp13 -> '!' Exp14                                 (114)
	Exp13 -> Exp14                                     (115)
	Exp12 -> Exp12 '*' Exp13                           (116)
	Exp12 -> Exp12 '/' Exp13                           (117)
	Exp12 -> Exp12 '%' Exp13                           (118)
	Exp12 -> Exp13                                     (119)
	Exp11 -> Exp11 '+' Exp12                           (120)
	Exp11 -> Exp11 '-' Exp12                           (121)
	Exp11 -> Exp12                                     (122)
	Exp10 -> Exp10 '<<' Exp11                          (123)
	Exp10 -> Exp10 '>>' Exp11                          (124)
	Exp10 -> Exp11                                     (125)
	Exp9 -> Exp9 '<' Exp10                             (126)
	Exp9 -> Exp9 '>' Exp10                             (127)
	Exp9 -> Exp9 '<=' Exp10                            (128)
	Exp9 -> Exp9 '>=' Exp10                            (129)
	Exp9 -> Exp10                                      (130)
	Exp8 -> Exp8 '==' Exp9                             (131)
	Exp8 -> Exp8 '!=' Exp9                             (132)
	Exp8 -> Exp9                                       (133)
	Exp4 -> Exp4 '&&' Exp5                             (134)
	Exp4 -> Exp5                                       (135)
	Exp3 -> Exp3 '||' Exp4                             (136)
	Exp3 -> Exp4                                       (137)
	Exp2 -> Exp2 '=' Exp3                              (138)
	Exp2 -> Exp2 '+=' Exp3                             (139)
	Exp2 -> Exp2 '-=' Exp3                             (140)
	Exp2 -> Exp2 '?' Exp3 ':' Exp3                     (141)
	Exp2 -> Exp3                                       (142)
	Exp1 -> 'throw' Exp1                               (143)
	Exp1 -> Exp2                                       (144)
	Qual -> Id '<' ListType '>'                        (145)
	Qual -> Id                                         (146)
	ListType -> Type                                   (147)
	ListType -> Type ',' ListType                      (148)
	Exp -> Exp1                                        (149)
	Exp5 -> Exp6                                       (150)
	Exp6 -> Exp7                                       (151)
	Exp7 -> Exp8                                       (152)
	Type -> 'bool'                                     (153)
	Type -> 'double'                                   (154)
	Type -> 'int'                                      (155)
	Type -> 'void'                                     (156)
	Type -> ListQual                                   (157)
	ListId -> Id                                       (158)
	ListId -> Id ',' ListId                            (159)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'const'        { PT _ (TS _ 34) }
	'do'           { PT _ (TS _ 35) }
	'double'       { PT _ (TS _ 36) }
	'else'         { PT _ (TS _ 37) }
	'false'        { PT _ (TS _ 38) }
	'for'          { PT _ (TS _ 39) }
	'if'           { PT _ (TS _ 40) }
	'inline'       { PT _ (TS _ 41) }
	'int'          { PT _ (TS _ 42) }
	'return'       { PT _ (TS _ 43) }
	'struct'       { PT _ (TS _ 44) }
	'throw'        { PT _ (TS _ 45) }
	'true'         { PT _ (TS _ 46) }
	'typedef'      { PT _ (TS _ 47) }
	'using'        { PT _ (TS _ 48) }
	'void'         { PT _ (TS _ 49) }
	'while'        { PT _ (TS _ 50) }
	'{'            { PT _ (TS _ 51) }
	'||'           { PT _ (TS _ 52) }
	'}'            { PT _ (TS _ 53) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pDecl    rule  6
	%start_pListDecl rule  7
	%start_pListStm rule  8
	%start_pExp16   rule  9
	%start_pListString rule  10
	%start_pExp15   rule  11
	%start_pListQual rule  12
	%start_pListExp rule  13
	%start_pExp14   rule  14
	%start_pExp13   rule  15
	%start_pExp12   rule  16
	%start_pExp11   rule  17
	%start_pExp10   rule  18
	%start_pExp9    rule  19
	%start_pExp8    rule  20
	%start_pExp4    rule  21
	%start_pExp3    rule  22
	%start_pExp2    rule  23
	%start_pExp1    rule  24
	%start_pQual    rule  25
	%start_pListType rule  26
	%start_pExp     rule  27
	%start_pExp5    rule  28
	%start_pExp6    rule  29
	%start_pExp7    rule  30
	%start_pType    rule  31
	%start_pListId  rule  32
	Integer         rule  33
	Double          rule  34
	Char            rule  35
	String          rule  36
	Id              rule  37
	Program         rule  38
	ListDef         rules 39, 40
	Def             rules 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51
	Arg             rules 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63
	ListArg         rules 64, 65, 66
	Stm             rules 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82
	Decl            rule  83
	ListDecl        rules 84, 85
	ListStm         rules 86, 87
	Exp16           rules 88, 89, 90, 91, 92, 93, 94
	ListString      rules 95, 96
	Exp15           rules 97, 98, 99, 100
	ListQual        rules 101, 102
	ListExp         rules 103, 104, 105
	Exp14           rules 106, 107, 108, 109, 110, 111
	Exp13           rules 112, 113, 114, 115
	Exp12           rules 116, 117, 118, 119
	Exp11           rules 120, 121, 122
	Exp10           rules 123, 124, 125
	Exp9            rules 126, 127, 128, 129, 130
	Exp8            rules 131, 132, 133
	Exp4            rules 134, 135
	Exp3            rules 136, 137
	Exp2            rules 138, 139, 140, 141, 142
	Exp1            rules 143, 144
	Qual            rules 145, 146
	ListType        rules 147, 148
	Exp             rule  149
	Exp5            rule  150
	Exp6            rule  151
	Exp7            rule  152
	Type            rules 153, 154, 155, 156, 157
	ListId          rules 158, 159

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 39
	'const'        reduce using rule 39
	'double'       reduce using rule 39
	'inline'       reduce using rule 39
	'int'          reduce using rule 39
	'struct'       reduce using rule 39
	'typedef'      reduce using rule 39
	'using'        reduce using rule 39
	'void'         reduce using rule 39
	L_Id           reduce using rule 39
	%eof           reduce using rule 39

	Program        goto state 133
	ListDef        goto state 134

State 1


	'bool'         reduce using rule 39
	'const'        reduce using rule 39
	'double'       reduce using rule 39
	'inline'       reduce using rule 39
	'int'          reduce using rule 39
	'struct'       reduce using rule 39
	'typedef'      reduce using rule 39
	'using'        reduce using rule 39
	'void'         reduce using rule 39
	L_Id           reduce using rule 39
	%eof           reduce using rule 39

	ListDef        goto state 132

State 2


	'bool'         shift, and enter state 42
	'const'        shift, and enter state 127
	'double'       shift, and enter state 43
	'inline'       shift, and enter state 128
	'int'          shift, and enter state 44
	'struct'       shift, and enter state 129
	'typedef'      shift, and enter state 130
	'using'        shift, and enter state 131
	'void'         shift, and enter state 45
	L_Id           shift, and enter state 37

	Id             goto state 38
	Def            goto state 125
	ListQual       goto state 39
	Qual           goto state 40
	Type           goto state 126

State 3


	'bool'         shift, and enter state 42
	'const'        shift, and enter state 123
	'double'       shift, and enter state 43
	'int'          shift, and enter state 44
	'void'         shift, and enter state 45
	L_Id           shift, and enter state 37

	Id             goto state 38
	Arg            goto state 124
	ListQual       goto state 39
	Qual           goto state 40
	Type           goto state 122

State 4


	'bool'         shift, and enter state 42
	'const'        shift, and enter state 123
	'double'       shift, and enter state 43
	'int'          shift, and enter state 44
	'void'         shift, and enter state 45
	L_Id           shift, and enter state 37
	%eof           reduce using rule 64

	Id             goto state 38
	Arg            goto state 120
	ListArg        goto state 121
	ListQual       goto state 39
	Qual           goto state 40
	Type           goto state 122

State 5


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'bool'         shift, and enter state 42
	'const'        shift, and enter state 111
	'do'           shift, and enter state 112
	'double'       shift, and enter state 43
	'false'        shift, and enter state 67
	'for'          shift, and enter state 113
	'if'           shift, and enter state 114
	'int'          shift, and enter state 44
	'return'       shift, and enter state 115
	'struct'       shift, and enter state 116
	'throw'        shift, and enter state 82
	'true'         shift, and enter state 68
	'typedef'      shift, and enter state 117
	'void'         shift, and enter state 45
	'while'        shift, and enter state 118
	'{'            shift, and enter state 119
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Stm            goto state 107
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 108
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 76
	Exp3           goto state 77
	Exp2           goto state 78
	Exp1           goto state 79
	Qual           goto state 40
	Exp            goto state 109
	Exp5           goto state 81
	Exp6           goto state 75
	Exp7           goto state 73
	Type           goto state 110

State 6


	'bool'         shift, and enter state 42
	'double'       shift, and enter state 43
	'int'          shift, and enter state 44
	'void'         shift, and enter state 45
	L_Id           shift, and enter state 37

	Id             goto state 38
	Decl           goto state 105
	ListQual       goto state 39
	Qual           goto state 40
	Type           goto state 106

State 7


	'bool'         reduce using rule 84
	'double'       reduce using rule 84
	'int'          reduce using rule 84
	'void'         reduce using rule 84
	L_Id           reduce using rule 84
	%eof           reduce using rule 84

	ListDecl       goto state 104

State 8


	'!'            reduce using rule 86
	'('            reduce using rule 86
	'*'            reduce using rule 86
	'++'           reduce using rule 86
	'--'           reduce using rule 86
	'bool'         reduce using rule 86
	'const'        reduce using rule 86
	'do'           reduce using rule 86
	'double'       reduce using rule 86
	'false'        reduce using rule 86
	'for'          reduce using rule 86
	'if'           reduce using rule 86
	'int'          reduce using rule 86
	'return'       reduce using rule 86
	'struct'       reduce using rule 86
	'throw'        reduce using rule 86
	'true'         reduce using rule 86
	'typedef'      reduce using rule 86
	'void'         reduce using rule 86
	'while'        reduce using rule 86
	'{'            reduce using rule 86
	L_integ        reduce using rule 86
	L_doubl        reduce using rule 86
	L_charac       reduce using rule 86
	L_quoted       reduce using rule 86
	L_Id           reduce using rule 86
	%eof           reduce using rule 86

	ListStm        goto state 103

State 9


	'('            shift, and enter state 63
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Exp16          goto state 102
	ListString     goto state 51

State 10


	L_quoted       shift, and enter state 71

	String         goto state 49
	ListString     goto state 101

State 11


	'('            shift, and enter state 63
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 100
	ListQual       goto state 53
	Qual           goto state 40

State 12


	L_Id           shift, and enter state 37

	Id             goto state 38
	ListQual       goto state 99
	Qual           goto state 40

State 13


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'throw'        shift, and enter state 82
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37
	%eof           reduce using rule 103

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	ListExp        goto state 97
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 76
	Exp3           goto state 77
	Exp2           goto state 78
	Exp1           goto state 79
	Qual           goto state 40
	Exp            goto state 98
	Exp5           goto state 81
	Exp6           goto state 75
	Exp7           goto state 73

State 14


	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 96
	Qual           goto state 40

State 15


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 54
	Exp13          goto state 95
	Qual           goto state 40

State 16


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 94
	Qual           goto state 40

State 17


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 93
	Qual           goto state 40

State 18


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 92
	Qual           goto state 40

State 19


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 91
	Qual           goto state 40

State 20


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 90
	Qual           goto state 40

State 21


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 89
	Qual           goto state 40
	Exp5           goto state 81
	Exp6           goto state 75
	Exp7           goto state 73

State 22


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 76
	Exp3           goto state 88
	Qual           goto state 40
	Exp5           goto state 81
	Exp6           goto state 75
	Exp7           goto state 73

State 23


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 76
	Exp3           goto state 77
	Exp2           goto state 87
	Qual           goto state 40
	Exp5           goto state 81
	Exp6           goto state 75
	Exp7           goto state 73

State 24


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'throw'        shift, and enter state 82
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 76
	Exp3           goto state 77
	Exp2           goto state 78
	Exp1           goto state 86
	Qual           goto state 40
	Exp5           goto state 81
	Exp6           goto state 75
	Exp7           goto state 73

State 25


	L_Id           shift, and enter state 37

	Id             goto state 38
	Qual           goto state 85

State 26


	'bool'         shift, and enter state 42
	'double'       shift, and enter state 43
	'int'          shift, and enter state 44
	'void'         shift, and enter state 45
	L_Id           shift, and enter state 37

	Id             goto state 38
	ListQual       goto state 39
	Qual           goto state 40
	ListType       goto state 83
	Type           goto state 84

State 27


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'throw'        shift, and enter state 82
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Exp4           goto state 76
	Exp3           goto state 77
	Exp2           goto state 78
	Exp1           goto state 79
	Qual           goto state 40
	Exp            goto state 80
	Exp5           goto state 81
	Exp6           goto state 75
	Exp7           goto state 73

State 28


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37

	Integer        goto state 46
	Double         goto state 47
	Char           goto state 48
	String         goto state 49
	Id             goto state 38
	Exp16          goto state 50
	ListString     goto state 51
	Exp15          goto state 52
	ListQual       goto state 53
	Exp14          goto state 54
	Exp13          goto state 55
	Exp12          goto state 56
	Exp11          goto state 57
	Exp10          goto state 58
	Exp9           goto state 59
	Exp8           goto state 60
	Qual           goto state 40
	Exp5           goto state 74
	Exp6           goto state 75
	Exp7           goto state 73

State 29


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_Id           shift, and enter state 37
